--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -1,8 +1,8 @@
 <section class="bg-gray-50 dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-        <span class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
+        <span class="flex items-center mb-6 text-3xl font-semibold text-gray-900 dark:text-white">
             <img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg" alt="logo">
-            Flowbite
+            Examo
         </span>
         <div
             class="w-full p-6 bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md dark:bg-gray-800 dark:border-gray-700 sm:p-8">
@@ -12,27 +12,53 @@
             <form class="mt-4 space-y-4 lg:mt-5 md:space-y-5" [formGroup]="resetPasswordForm"
                 (ngSubmit)="resetPassword()">
                 <div>
-                    <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">New
-                        Password</label>
-                    <input type="password" name="password" id="password" formControlName="password"
-                        placeholder="Enter new password"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                        required>
+                    <label for="password" class="block mb-2 text-md font-medium text-gray-900 dark:text-white">
+                        New Password
+                    </label>
+                    <div class="flex">
+                        <span
+                            class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border border-gray-300 border-e-0 rounded-s-xl dark:bg-gray-600 dark:text-gray-400 dark:border-gray-600">
+                            <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                viewBox="0 0 24 24">
+                                <path fill-rule="evenodd"
+                                    d="M8 10V7a4 4 0 1 1 8 0v3h1a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h1Zm2-3a2 2 0 1 1 4 0v3h-4V7Zm2 6a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1Z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </span>
+                        <input type="password" name="password" id="password" formControlName="password"
+                            placeholder="Enter new password"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-e-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            required>
+                    </div>
                     @if (getPassword.touched && getPassword.invalid) {
                     @if (getPassword.hasError('required')) {
-                    <div class="text-red-500">New Password is required</div>
+                    <div class="text-red-500">Password is required</div>
                     } @else if (getPassword.hasError('minlength')) {
-                    <div class="text-red-500">New Password must be at least 6 characters</div>
+                    <div class="text-red-500">Password must be at least 6 characters</div>
                     }
                     }
                 </div>
-                <div>
-                    <label for="confirm-password"
-                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirm password</label>
-                    <input type="password" name="confirm-password" id="confirm-password"
-                        formControlName="confirmPassword" placeholder="Confirm new password"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                        required>
+                <div class="mb-6">
+                    <label for="confirm-password" class="block mb-2 text-md font-medium text-gray-900 dark:text-white">
+                        Confirm password
+                    </label>
+                    <div class="flex">
+                        <span
+                            class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border border-gray-300 border-e-0 rounded-s-lg dark:bg-gray-600 dark:text-gray-400 dark:border-gray-600">
+                            <svg class="w-[28px] text-gray-800 dark:text-white" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                viewBox="0 0 24 24">
+                                <path fill-rule="evenodd"
+                                    d="M8 10V7a4 4 0 1 1 8 0v3h1a2 2 0 1 1 8 0v3h1a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h1Zm2-3a2 2 0 1 1 4 0v3h-4V7Zm2 6a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1Z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </span>
+                        <input type="password" name="confirm-password" id="confirm-password"
+                            formControlName="confirmPassword" placeholder="Confirm new password"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-e-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            required>
+                    </div>
                     @if (confirmPassword.touched && confirmPassword.invalid) {
                     @if (confirmPassword.hasError('required')) {
                     <div class="text-red-500">Confirm Password is required</div>
@@ -45,7 +71,7 @@
                     }
                 </div>
                 <button type="submit" [disabled]="resetPasswordForm.invalid || isSubmitting"
-                    class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                    class="w-full text-white bg-blue-600 hover:bg-blue-800 focus:ring-2 focus:ring-blue-500 focus:outline-none shadow-md hover:shadow-lg font-semibold rounded-lg text-base px-6 py-3 mt-5 text-center transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed dark:bg-blue-700 dark:hover:bg-blue-600 dark:focus:ring-blue-500">
                     {{ isSubmitting ? 'Resetting...' : 'Reset Password' }}
                 </button>
             </form>
