--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -14,11 +14,11 @@
     <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
         <a [routerLink]="['/homeStudent']" class="flex items-center ps-2.5 mb-5">
             <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 me-3 sm:h-7" alt="Flowbite Logo" />
-            <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+            <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Examo</span>
         </a>
         <ul class="space-y-2 font-medium">
             <li>
-                <a [routerLink]="['/homeStudent/main']" [routerLinkActive]="'text-primary-700 text-2xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/main']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                     <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -31,7 +31,7 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/profile']" [routerLinkActive]="'text-primary-700 text-2xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/profile']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                     <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -44,7 +44,7 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/notifications']" [routerLinkActive]="'text-primary-700 text-2xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/notifications']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                     <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -59,7 +59,7 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/exams']" [routerLinkActive]="'text-primary-700 text-2xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/exams']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                     <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -72,7 +72,7 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/results']" [routerLinkActive]="'text-primary-700 text-2xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/results']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                     <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
