solve bug in profile component and change color in sidebar

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
             <li>
                 <a [routerLink]="['/homeStudent/main']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -33,7 +33,7 @@
             <li>
                 <a [routerLink]="['/homeStudent/profile']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -46,7 +46,7 @@
             <li>
                 <a [routerLink]="['/homeStudent/notifications']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -61,7 +61,7 @@
             <li>
                 <a [routerLink]="['/homeStudent/exams']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -74,7 +74,7 @@
             <li>
                 <a [routerLink]="['/homeStudent/results']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -89,7 +89,7 @@
             <li>
                 <a href="#"
                     class="flex items-center p-2 text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 dark:text-white group">
-                    <svg class="w-[28px] h-[28px] text-gray-800 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path d="M14 19V5h4a1 1 0 0 1 1 1v11h1a1 1 0 0 1 0 2h-6Z" />
