--- a/src/app/pages/home-student/home-student.component.html
+++ b/src/app/pages/home-student/home-student.component.html
@@ -1,5 +1,5 @@
-<div class="p-4 sm:ml-64">
-    <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 h-full text-center">
+<div class="p-4 sm:ml-64 min-h-screen bg-gray-100 dark:bg-gray-900">
+    <div class="p-4 rounded-lg dark:border-gray-700 h-full text-center">
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 items-stretch min-h-[300px] sm:min-h-[400px] mb-[60px]">
             <div class="flex flex-col gap-2 sm:gap-4 justify-between">
                 <div
