--- a/src/app/pages/results-student/results-student.component.html
+++ b/src/app/pages/results-student/results-student.component.html
@@ -1,3 +1,12 @@
-<div class="p-4 sm:ml-64">
-    the results page
+<div class="p-4 sm:ml-64 min-h-screen bg-gray-100 dark:bg-gray-900">
+    <div class="max-w-6xl mx-auto p-6">
+        <h2 class="text-3xl text-center font-bold text-primary-700 dark:text-gray-200 mb-9">Your Results</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            @for (subject of subjects; track subject.id) {
+            <app-subject-grades-card [subject]="subject"></app-subject-grades-card>
+            } @empty {
+            <p class="text-gray-500 dark:text-gray-400 col-span-3">No results available</p>
+            }
+        </div>
+    </div>
 </div>
