edit in design in some components

--- a/src/app/shared/profile/profile.component.html
+++ b/src/app/shared/profile/profile.component.html
@@ -1,11 +1,11 @@
 <div class="p-4 sm:ml-64 min-h-screen bg-gray-100 dark:bg-gray-900">
     <div class="max-w-4xl mx-auto p-6 bg-white rounded-xl shadow-lg mt-10 transition-all duration-300">
         <div class="flex flex-col md:flex-row items-center md:items-start md:space-x-6 mb-6">
-            <img [src]="userProfileData.image || 'https://placehold.co/120x120/000000/FFFFFF.png'"
+            <img [src]="userProfileData.image || 'https://static-00.iconduck.com/assets.00/user-icon-1024x1024-dtzturco.png'"
                 [alt]="userProfileData.name"
                 class="w-32 h-32 rounded-full object-cover border-4 border-gray-200 dark:border-gray-600">
             <div class="text-center md:text-left mt-4 md:mt-10">
-                <h2 class="text-2xl font-bold text-gray-800 dark:text-gray-200">{{ userProfileData.name }}</h2>
+                <h2 class="text-2xl font-bold text-primary-700 dark:text-gray-200">{{ userProfileData.name }}</h2>
             </div>
         </div>
 
