--- a/src/app/pages/results-student/results-student.component.html
+++ b/src/app/pages/results-student/results-student.component.html
@@ -3,7 +3,7 @@
         <h2 class="text-3xl text-center font-bold text-primary-700 dark:text-gray-200 mb-9">Your Results</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             @for (subject of subjects; track subject.id) {
-            <app-subject-grades-card [subject]="subject"></app-subject-grades-card>
+            <app-subject-grades-card [subject]="subject" />
             } @empty {
             <p class="text-gray-500 dark:text-gray-400 col-span-3">No results available</p>
             }
